# legalis

./: .dockerignore  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  LICENSE  LICENSE-APACHE  LICENSE-MIT  PLATFORM-NOTES.md  PUBLISHING.md  README.md  RELEASE-0.1.0.md  RELEASE-0.1.1.md  RELEASE-0.1.2.md  RELEASE-0.1.3.md  RELEASE-0.1.4.md  SECURITY.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  legalis.md  nginx.conf  publish_dryrun.sh  publish_one.sh  setup-z3-env.sh
crates/legalis-api/: .dockerignore  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  docker-compose.yml  openapi.json  prometheus.yml
crates/legalis-api/examples/: sdk_generation.rs
crates/legalis-api/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  servicemonitor.yaml
crates/legalis-api/proto/: legalis.proto
crates/legalis-api/src/: ai_suggestions.rs  anomaly.rs  async_jobs.rs  audit.rs  auth.rs  cache.rs  changelog.rs  collaborative.rs  config.rs  contract_test.rs  cqrs.rs  dataloader.rs  edge_cache.rs  event_replay.rs  event_schema.rs  event_sourcing.rs  event_streaming.rs  field_selection.rs  gateway.rs  graphql.rs  grpc.rs  lib.rs  live_queries.rs  load_test.rs  logging.rs  metrics.rs  mocking.rs  multitenancy.rs  oauth2_provider.rs  observability.rs  openapi.rs  persisted_queries.rs  playground.rs  presence.rs  query_batch.rs  query_cost.rs  rate_limit.rs  rebac.rs  sampling.rs  schema_stitching.rs  (+8 more)
crates/legalis-api/tests/: property_tests.rs
crates/legalis-audit/: Cargo.toml  README.md  TODO.md
crates/legalis-audit/benches/: audit_benchmarks.rs
crates/legalis-audit/src/: aggregate.rs  analysis.rs  archival.rs  async_batch.rs  batch.rs  behavioral.rs  bias.rs  bloom.rs  clustering.rs  comparison.rs  compliance.rs  compression.rs  custody.rs  dashboard.rs  datadog.rs  delivery.rs  elasticsearch.rs  encryption.rs  evidence.rs  export.rs  forensic.rs  incident_response.rs  integrity.rs  integrity_checker.rs  interactive.rs  jira.rs  join.rs  lib.rs  lineage.rs  ml_anomaly.rs  newrelic.rs  notifications.rs  predictive.rs  query.rs  query_plan.rs  realtime_alert.rs  regulator.rs  replay.rs  retention.rs  risk_scoring.rs  (+14 more)
crates/legalis-audit/tests/: concurrent_tests.rs
crates/legalis-chain/: Cargo.toml  README.md  TODO.md
crates/legalis-chain/benches/: contract_generation.rs
crates/legalis-chain/src/: lib.rs
crates/legalis-cli/: Cargo.toml  README.md  TODO.md
crates/legalis-cli/benches/: cli_benchmarks.rs
crates/legalis-cli/src/: ai.rs  batch.rs  cache.rs  cloud.rs  commands.rs  config.rs  debug.rs  error_suggestions.rs  interactive.rs  lib.rs  main.rs  parallel.rs  perf.rs  plugin.rs  profile.rs  progress.rs  scripting.rs  team.rs  theme.rs  tui.rs  tutorial.rs  workflow.rs
crates/legalis-cli/tests/: cli_integration.rs  contract_tests.rs  integration.rs  snapshot_tests.rs
crates/legalis-core/: ADR.md  Cargo.toml  PERFORMANCE.md  README.md  RUNBOOK.md  TODO.md
crates/legalis-core/benches/: core_benchmarks.rs
crates/legalis-core/fuzz/: Cargo.toml  README.md
crates/legalis-core/src/: adaptive_cache.rs  arena.rs  autonomous_agents.rs  blockchain_verification.rs  case_law.rs  compact.rs  const_collections.rs  decentralized_registry.rs  digital_twin.rs  distributed.rs  document_processing.rs  event_sourcing.rs  explainable_ai.rs  explanation.rs  finetuned_llm.rs  formal_methods.rs  formats.rs  gpu_offload.rs  hierarchy.rs  hybrid_reasoning.rs  interning.rs  jit_framework.rs  knowledge_graph.rs  lazy.rs  lib.rs  llm_interpretation.rs  memory_pool.rs  multi_jurisdictional.rs  neural_entailment.rs  oracle.rs  parallel_eval.rs  probabilistic.rs  quantum.rs  realtime_sync.rs  rule_learning.rs  scenario_simulation.rs  simd_eval.rs  smart_contract.rs  temporal.rs  testing.rs  (+6 more)
crates/legalis-core/tests/: property_tests.rs
crates/legalis-diff/: Cargo.toml  README.md  TODO.md
crates/legalis-diff/benches/: diff_performance.rs
crates/legalis-diff/examples/: advanced_features.rs  formatting_demo.rs
crates/legalis-diff/src/: adaptive.rs  advanced_cache.rs  advanced_visual.rs  algorithms.rs  analysis.rs  api.rs  audit.rs  cloud.rs  collaborative.rs  collaborative_review.rs  compliance.rs  cross_jurisdiction.rs  distributed.rs  dsl.rs  enterprise.rs  export.rs  export_plugins.rs  formats.rs  fuzzy.rs  git.rs  gpu.rs  integration.rs  integration_examples.rs  legal_domain.rs  legislative_history.rs  lib.rs  llm.rs  machine_readable.rs  merge.rs  ml.rs  ml_advanced.rs  multilingual.rs  nlp.rs  optimization.rs  parallel.rs  patterns.rs  plugins.rs  quantum.rs  realtime.rs  recommendation.rs  (+15 more)
crates/legalis-diff/tests/: property_tests.rs
crates/legalis-dsl/: Cargo.toml  MODULESYSTEM.md  README.md  TODO.md
crates/legalis-dsl/benches/: parser_benchmarks.rs
crates/legalis-dsl/src/: ast.rs  (+43 more)
crates/legalis-i18n/: Cargo.toml  README.md  TODO.md
crates/legalis-interop/: Cargo.toml  README.md  TODO.md
crates/legalis-llm/: Cargo.toml  README.md  TODO.md
crates/legalis-lod/: Cargo.toml  EXAMPLES.md  README.md  TODO.md
crates/legalis-porting/: Cargo.toml  README.md  TODO.md
crates/legalis-registry/: Cargo.toml  README.md  TODO.md
crates/legalis-sim/: Cargo.toml  README.md  TODO.md
crates/legalis-verifier/: CI_CD.md  Cargo.toml  HOOKS.md  IDE_INTEGRATION.md  README.md  TODO.md  pre-commit.sh
crates/legalis-viz/: Cargo.toml  README.md  TODO.md
examples/comparative-tort-law/: Cargo.toml  README.md
examples/cross-jurisdiction-demo/: Cargo.toml  README.md
examples/gdpr-cross-border-validator/: Cargo.toml  README.md
examples/jp-constitution-3d/: Cargo.toml
examples/judgment-anonymization/: Cargo.toml  README.md
examples/legal-dsl-interop/: Cargo.toml
examples/legal-knowledge-graph/: Cargo.toml
examples/legislative-diff-simulator/: Cargo.toml  README.md
examples/llm-hallucination-firewall/: Cargo.toml  README.md
examples/minpo-709-tort/: Cargo.toml  README.md
examples/multilingual-statute/: Cargo.toml
examples/private-international-law/: Cargo.toml
examples/smart-contract-export/: Cargo.toml
(+2020 files in other folders)
