[workspace]
resolver = "3"
members = [
    # Core Layer
    "crates/legalis-core",
    "crates/legalis-dsl",
    "crates/legalis-registry",
    # Intelligence Layer
    "crates/legalis-llm",
    "crates/legalis-verifier",
    # Simulation & Analysis Layer
    "crates/legalis-sim",
    "crates/legalis-diff",
    # Internationalization & Porting Layer
    "crates/legalis-i18n",
    "crates/legalis-porting",
    # Interoperability Layer
    "crates/legalis-interop",
    # Output Layer
    "crates/legalis-viz",
    "crates/legalis-chain",
    "crates/legalis-lod",
    # Infrastructure Layer
    "crates/legalis-audit",
    "crates/legalis-api",
    "crates/legalis-cli",
    # Jurisdictions
    "jurisdictions/jp",
    "jurisdictions/de",
    "jurisdictions/fr",
    "jurisdictions/us",
    "jurisdictions/eu",
    "jurisdictions/sg",
    "jurisdictions/uk",
    "jurisdictions/ca",
    "jurisdictions/au",
    "jurisdictions/la",
    "jurisdictions/cn",
    "jurisdictions/in",
    "jurisdictions/br",
    "jurisdictions/th",
    "jurisdictions/id",
    "jurisdictions/vn",
    "jurisdictions/ae",
    "jurisdictions/za",
    "jurisdictions/kr",
    "jurisdictions/my",
    "jurisdictions/ru",
    "jurisdictions/sa",
    "jurisdictions/mx",
    # Examples
    "examples/jp-constitution-3d",
    "examples/welfare-benefits",
    "examples/minpo-709-tort",
    "examples/minpo-709-builder",
    "examples/minpo-710-damages-builder",
    "examples/minpo-715-employer-liability",
    "examples/minpo-415-breach-damages",
    "examples/minpo-integrated-tort-damages",
    "examples/comparative-tort-law",
    "examples/jp-drone-regulation",
    # International Examples
    "examples/eu-gdpr-compliance",
    "examples/uk-employment-law",
    "examples/brazil-consumer-protection",
    "examples/india-rti-act",
    "examples/singapore-business",
    "examples/australia-immigration",
    "examples/canada-healthcare",
    "examples/korea-labor-law",
    "examples/mexico-tax-law",
    "examples/thailand-business",
    # Advanced/Research Examples
    "examples/soviet-law-history",
    "examples/private-international-law",
    "examples/laos-civil-code",
    "examples/religious-legal-systems",
    # Technical Feature Examples
    "examples/smart-contract-export",
    "examples/legal-knowledge-graph",
    "examples/statute-version-control",
    "examples/legal-dsl-interop",
    "examples/multilingual-statute",
    "examples/judgment-anonymization",
    "examples/llm-hallucination-firewall",
    "examples/legislative-diff-simulator",
    "examples/executable-law",
    "examples/gdpr-cross-border-validator",
    "examples/cross-jurisdiction-demo",
]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/legalis"
homepage = "https://github.com/cool-japan/legalis"
repository = "https://github.com/cool-japan/legalis"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.13", features = ["serde"] }
regex = "1.12"
rayon = "1.11"
rand = "0.9.2"
tempfile = "3.24"

# HTTP/API
reqwest = { version = "0.13", features = ["json", "stream"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
governor = "0.10"

# GraphQL
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Visualization
petgraph = "0.8"

# Testing
criterion = "0.8"
proptest = "1.9"

# PDF Export
printpdf = "0.8"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internationalization
rust-i18n = "3.1"
unic-langid = "0.9"

# SMT Solver (OxiZ - Pure Rust Z3 alternative)
# Using published crates.io version
oxiz-solver = "0.1.2"
oxiz-core = "0.1.2"
num-bigint = "0.4"

# Internal crates
legalis-core = { version = "0.1.4", path = "crates/legalis-core" }
legalis-dsl = { version = "0.1.4", path = "crates/legalis-dsl" }
legalis-llm = { version = "0.1.4", path = "crates/legalis-llm" }
legalis-sim = { version = "0.1.4", path = "crates/legalis-sim" }
legalis-verifier = { version = "0.1.4", path = "crates/legalis-verifier" }
legalis-chain = { version = "0.1.4", path = "crates/legalis-chain" }
legalis-viz = { version = "0.1.4", path = "crates/legalis-viz" }
legalis-i18n = { version = "0.1.4", path = "crates/legalis-i18n" }
legalis-porting = { version = "0.1.4", path = "crates/legalis-porting" }
legalis-api = { version = "0.1.4", path = "crates/legalis-api" }
legalis = { version = "0.1.4", path = "crates/legalis-cli" }
legalis-audit = { version = "0.1.4", path = "crates/legalis-audit" }
legalis-registry = { version = "0.1.4", path = "crates/legalis-registry" }
legalis-diff = { version = "0.1.4", path = "crates/legalis-diff" }
legalis-interop = { version = "0.1.4", path = "crates/legalis-interop" }
legalis-lod = { version = "0.1.4", path = "crates/legalis-lod" }
legalis-jp = { version = "0.1.4", path = "jurisdictions/jp" }
legalis-de = { version = "0.1.4", path = "jurisdictions/de" }
legalis-fr = { version = "0.1.4", path = "jurisdictions/fr" }
legalis-us = { version = "0.1.4", path = "jurisdictions/us" }
legalis-eu = { version = "0.1.4", path = "jurisdictions/eu" }
legalis-sg = { version = "0.1.4", path = "jurisdictions/sg" }
legalis-uk = { version = "0.1.4", path = "jurisdictions/uk" }
legalis-ca = { version = "0.1.4", path = "jurisdictions/ca" }
legalis-au = { version = "0.1.4", path = "jurisdictions/au" }
legalis-la = { version = "0.1.4", path = "jurisdictions/la" }
legalis-cn = { version = "0.1.4", path = "jurisdictions/cn" }
legalis-in = { version = "0.1.4", path = "jurisdictions/in" }
legalis-br = { version = "0.1.4", path = "jurisdictions/br" }
legalis-th = { version = "0.1.4", path = "jurisdictions/th" }
legalis-id = { version = "0.1.4", path = "jurisdictions/id" }
legalis-vn = { version = "0.1.4", path = "jurisdictions/vn" }
legalis-ae = { version = "0.1.4", path = "jurisdictions/ae" }
legalis-za = { version = "0.1.4", path = "jurisdictions/za" }
legalis-kr = { version = "0.1.4", path = "jurisdictions/kr" }
legalis-my = { version = "0.1.4", path = "jurisdictions/my" }
legalis-ru = { version = "0.1.4", path = "jurisdictions/ru" }
legalis-sa = { version = "0.1.4", path = "jurisdictions/sa" }
legalis-mx = { version = "0.1.4", path = "jurisdictions/mx" }
