[package]
name = "legalis-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "REST/GraphQL API server for Legalis-RS"
repository = "https://github.com/cool-japan/legalis"
homepage = "https://github.com/cool-japan/legalis"
documentation = "https://docs.rs/legalis-api"

[features]
default = ["grpc"]
redis-cache = ["redis"]
oauth2-auth = ["oauth2", "reqwest"]
otel-tracing = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
grpc = ["tonic", "prost", "tonic-reflection", "tonic-health", "tonic-web"]

[dependencies]
legalis-core.workspace = true
legalis-dsl.workspace = true
legalis-verifier.workspace = true
legalis-registry.workspace = true
legalis-audit.workspace = true
legalis-sim.workspace = true
legalis-viz.workspace = true
legalis-llm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
governor.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
prometheus = "0.14"
lazy_static = "1.5"
futures = "0.3"
base64 = "0.22"
async-graphql = "7.0"
async-graphql-axum = "7.1"
tokio-stream = { version = "0.1", features = ["sync"] }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"], optional = true }
oauth2 = { version = "5.0", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }
url = "2.5"
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
regex = "1.12"
rand = "0.9.2"
sha2 = "0.10"
hex = "0.4"
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tonic-reflection = { version = "0.12", optional = true }
tonic-health = { version = "0.12", optional = true }
tonic-web = { version = "0.12", optional = true }

[build-dependencies]
tonic-build = "0.12"
