[package]
name = "legalis-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Audit trail and decision logging for Legalis-RS"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9"
printpdf = "0.7"
rust_xlsxwriter = "0.80"
flate2 = "1.1"
