[package]
name = "legalis-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Audit trail and decision logging for Legalis-RS"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9"
printpdf = "0.7"
rust_xlsxwriter = "0.80"
flate2 = "1.1"
num_cpus = "1.16"
hostname = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.15"

[[bench]]
name = "audit_benchmarks"
harness = false
