[package]
name = "legalis-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Smart contract export for Legalis-RS"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "contract_generation"
harness = false
