[package]
name = "legalis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line interface for Legalis-RS"

[[bin]]
name = "legalis"
path = "src/main.rs"

[dependencies]
legalis-core.workspace = true
legalis-dsl.workspace = true
legalis-verifier.workspace = true
legalis-viz.workspace = true
legalis-chain.workspace = true
legalis-api.workspace = true
legalis-diff.workspace = true
legalis-sim.workspace = true
legalis-audit.workspace = true
legalis-porting.workspace = true
legalis-i18n.workspace = true
legalis-interop.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
