[package]
name = "legalis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line interface for Legalis-RS"

[[bin]]
name = "legalis"
path = "src/main.rs"

[dependencies]
legalis-core.workspace = true
legalis-dsl.workspace = true
legalis-verifier.workspace = true
legalis-viz.workspace = true
legalis-chain.workspace = true
legalis-api.workspace = true
legalis-diff.workspace = true
legalis-sim.workspace = true
legalis-audit.workspace = true
legalis-porting.workspace = true
legalis-i18n.workspace = true
legalis-interop.workspace = true
legalis-lod.workspace = true
legalis-registry.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
clap.workspace = true
clap_complete = "4.5"
clap_mangen = "0.2"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml = "0.9"
dirs = "5.0"
colored = "2.1"
comfy-table = "7.1"
rustyline = "14.0"
indicatif = "0.17"
csv = "1.3"
rayon = "1.10"
glob = "0.3"
num_cpus = "1.16"
terminal_size = "0.4"
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
insta = { version = "1.41", features = ["yaml"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cli_benchmarks"
harness = false
