[package]
name = "legalis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types and traits for Legalis-RS legal framework"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "uuid/serde", "chrono/serde"]
schema = ["dep:schemars", "serde"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
schemars = { version = "0.8", features = ["uuid1", "chrono"], optional = true }
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
regex = "1.11"

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"

[[bench]]
name = "core_benchmarks"
harness = false
