[package]
name = "legalis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for Legalis-RS legal framework"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/legalis-core"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "uuid/serde", "chrono/serde"]
schema = ["dep:schemars", "serde"]
parallel = ["dep:rayon"]
yaml = ["dep:serde_yaml", "serde"]
toml = ["dep:toml", "serde"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.9", optional = true }
schemars = { version = "1.2", features = ["uuid1", "chrono04"], optional = true }
rayon = { workspace = true, optional = true }
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
regex.workspace = true
sha2 = "0.10"

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "core_benchmarks"
harness = false
