[package]
name = "legalis-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Statute diffing and change detection for Legalis-RS"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
rayon = "1.10"
rhai = { version = "1.19", features = ["serde", "sync"] }
lru = "0.12"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[[bench]]
name = "diff_performance"
harness = false
