[package]
name = "legalis-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Statute diffing and change detection for Legalis-RS"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/legalis-diff"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
rayon.workspace = true
rhai = { version = "1.24", features = ["serde", "sync"] }
lru = "0.16"
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "diff_performance"
harness = false
