[package]
name = "legalis-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Domain Specific Language for legal document parsing"

[dependencies]
legalis-core.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml = "0.8"
thiserror.workspace = true
regex = "1"
rustyline = "14"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
insta = { version = "1", features = ["json", "yaml"] }

[[bench]]
name = "parser_benchmarks"
harness = false
