[package]
name = "legalis-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Internationalization support for Legalis-RS - multi-language and multi-jurisdiction"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "i18n_benchmarks"
harness = false
