[package]
name = "legalis-interop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Interoperability layer for legal DSL formats (Catala, Stipula, L4, Akoma Ntoso)"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
regex-lite = "0.1"
quick-xml = { version = "0.37", features = ["serialize"] }
rayon = { version = "1.10", optional = true }
tokio = { version = "1.42", features = ["rt", "fs"], optional = true }

[features]
default = []
parallel = ["rayon"]
async = ["tokio"]

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.42", features = ["macros", "rt"] }

[[bench]]
name = "conversion"
harness = false
