[package]
name = "legalis-interop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Interoperability layer for legal DSL formats (Catala, Stipula, L4, Akoma Ntoso)"
repository = "https://github.com/cool-japan/legalis"
homepage = "https://github.com/cool-japan/legalis"
documentation = "https://docs.rs/legalis-interop"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
regex-lite = "0.1"
quick-xml = { version = "0.38", features = ["serialize"] }
rayon = { version = "1.11", optional = true }
tokio = { version = "1.49", features = ["rt", "fs"], optional = true }
walkdir = { version = "2.5", optional = true }
notify = { version = "8.2", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
default = []
parallel = ["rayon"]
async = ["tokio"]
batch = ["walkdir", "notify", "serde_yaml", "rayon"]

[dev-dependencies]
criterion = "0.7"
tokio = { version = "1.49", features = ["macros", "rt"] }
tempfile = "3.24"

[[bench]]
name = "conversion"
harness = false
